# Search_System_Diplom

./: .gitignore  CMakeLists.txt  build.sh
SSClient/: CMakeLists.txt  main.cpp
SSClient/include/: spider.hpp
SSDataBase/: CMakeLists.txt
SSDataBase/include/SSDataBase/: db.hpp
SSDataBase/src/: db.cpp
SSHelp/: CMakeLists.txt
SSHelp/include/SSHelp/: hit.hpp
SSHelp/src/: hit.cpp
SSNetworking/: CMakeLists.txt
SSNetworking/include/SSNetworking/: base.hpp  server.hpp  session.hpp
SSNetworking/src/: base.cpp  server.cpp  session.cpp
SSParserConfig/: CMakeLists.txt
SSParserConfig/include/SSParserConfig/: config_parser.hpp
SSParserConfig/src/: config_parser.cpp
SSServer/: CMakeLists.txt  main.cpp
config/: config.ini
http-client/: CMakeLists.txt  main.cpp
http-server/: CMakeLists.txt  main.cpp
